Dark mode y cambios en registro de ordenes

--- a/src/components/Cards/order3.astro
+++ b/src/components/Cards/order3.astro
@@ -1,9 +1,9 @@
   <div
-    class="border rounded-2xl p-1 lg:w-96 w-11/12 mx-auto my-16 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300"
+    class="border rounded-2xl p-1 lg:w-96 w-11/12 mx-auto my-16 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300 dark:hover:bg-gray-800"
   >
     <div class="grid  h-20 justify-center items-center">
       <svg
-        class="w-12 h-12 text-gray-800 "
+        class="w-12 h-12 text-gray-800 dark:text-orange-500 "
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="">
-      <div class="bordecito h-11 w-11 absolute bg-white rounded-3xl p-1 -m-6">
+      <div class="bordecito h-11 w-11 absolute bg-white dark:bg-dark rounded-3xl p-1 -m-6">
       </div>
       <div class="bordecito h-9 w-9 absolute bg-green-500 rounded-3xl p-1 -m-5">
       </div>
