--- a/src/components/Cards/order4.astro
+++ b/src/components/Cards/order4.astro
@@ -4,9 +4,9 @@
     <div class="grid items-center justify-center">
       <h2 class="text-lg">001428 Byron Vladimir Tito </h2>
     </div>
-    <div class=" grid justify-end">
+    <div class=" grid justify-end items-center">
       <svg
-        class="w-14 h-14 text-black right-0"
+        class="w-14 h-14 text-black right-0 dark:text-white"
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
