--- a/src/components/Cards/order6.astro
+++ b/src/components/Cards/order6.astro
@@ -1,24 +1,22 @@
-    <div class=" flex justify-evenly items-center border-8 border-blue-600 h-24 my-16 rounded-2xl lg:w-96 w-11/12 mx-auto ">
-        <div>
-            <h2 class="text-lg">001248 Byron Vladimir Tito </h2>
-            <p class="text-gray-400">TKS - 91919</p>
-        </div>
-        <div>
-            <svg
-              class="w-14 h-14  text-black"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              fill="none"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M8 20V10m0 10-3-3m3 3 3-3m5-13v10m0-10 3 3m-3-3-3 3"></path>
-            </svg>
-          </div>
-    </div>
+<div
+  class="flex justify-evenly items-center border-8 border-blue-600 h-24 my-16 rounded-2xl lg:w-96 w-11/12 mx-auto"
+>
+  <div>
+    <h2 class="text-lg">001248 Byron Vladimir Tito</h2>
+    <p class="text-gray-400">TKS - 91919</p>
+  </div>
+  <div class="h-10">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="undefined"
+      height="undefined"
+      viewBox="0 0 520 472"
+      class="text-sky-500"
+    >
+      <path
+        fill="currentColor"
+        d="M70 365q74 0 118-57q0-4-5-7l-19-38q-13 27-38.5 43.5T70 323H21q-8 0-14.5 6.5T0 344t6.5 14.5T21 365h49zM442 9q-16-14-30 0q-15 15 0 30l27 28h-83q-73 0-117 57q0 3 4 7l19 38q13-27 38.5-43.5T356 109h83l-27 28q-15 15 0 30q6 6 15 6q7 0 15-6l64-64q13-15 0-30zm0 256q-16-14-30 0q-15 15 0 30l27 28h-83q-30 0-56-16.5T260 263l-23-47l-24-47l-10-19q-18-38-54-60.5T70 67H21q-8 0-14.5 6.5T0 88t6.5 14.5T21 109h49q64 0 96 60l24 47l23 47l11 19q20 38 55.5 60.5T358 365h84l-28 28q-15 15 0 30q6 6 15 6q8 0 15-6l64-64q13-15 0-30z"
+      ></path>
+    </svg>
+  </div>
+</div>
