--- a/src/components/Cards/order7.astro
+++ b/src/components/Cards/order7.astro
@@ -1,30 +1,30 @@
-  <div class="bordecito h-24 rounded-2xl lg:w-96 w-11/12 my-16 mx-auto overflow-hidden ">
-    <div class="flex justify-evenly items-center mt-4">
-      <div>
-        <h2 class="text-lg">001248 Byron Vladimir Tito  </h2>
-        <p class="text-gray-400">TKS - 91919</p>
-      </div>
-      <div>
-        <svg
-          class="w-14 h-14 text-black"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          fill="none"
-          viewBox="0 0 24 24"
-        >
-          <path
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M8 20V10m0 10-3-3m3 3 3-3m5-13v10m0-10 3 3m-3-3-3 3"></path>
-        </svg>
-      </div>
+<div
+  class="bordecito h-24 rounded-2xl lg:w-96 w-11/12 my-16 mx-auto overflow-hidden"
+>
+  <div class="flex justify-evenly items-center mt-4">
+    <div>
+      <h2 class="text-lg">001248 Byron Vladimir Tito</h2>
+      <p class="text-gray-400">TKS - 91919</p>
     </div>
-    <div class="bg-orange-500 h-2 mt-4 "></div>
+    <div class="h-10 text-red-500">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="undefined"
+        height="undefined"
+        viewBox="0 0 14 14"
+      >
+        <path
+          fill="none"
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="m.5.5l13 13M7 13.25a1.31 1.31 0 1 0 0-2.62a1.31 1.31 0 0 0 0 2.62M4.53 9a3.49 3.49 0 0 1 1.143-.78M2.36 7.31c.609-.612 1.257-.986 1.257-.986m1.933-.781s.592-.165 1.455-.165A6.55 6.55 0 0 1 11.65 7.31M3.482 3.457A9.19 9.19 0 0 1 13.5 5.45m-13 0c.36-.36.732-.657 1.176-.99"
+        ></path>
+      </svg>
+    </div>
   </div>
+  <div class="bg-orange-500 h-2 mt-4"></div>
+</div>
 <style>
   .bordecito {
     border: 1px solid rgba(0, 0, 0, 0.45);
