--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,23 +10,23 @@
       <nav class="">
         <ul class="flex lg:gap-5 justify-between">
           <li
-            class="nav__cards py-1 px-2 nav__links hover:bg-gray-300 rounded-lg duration-500">
+            class="nav__cards py-1 px-2 nav__links dark:hover:bg-gray-800 hover:bg-gray-300 rounded-lg duration-500">
             <a href="/Cards">Cards</a>
           </li>
           <li
-            class="nav__navbars py-1 px-2 nav__links hover:bg-gray-300 rounded-lg duration-500">
+            class="nav__navbars py-1 px-2 nav__links dark:hover:bg-gray-800 hover:bg-gray-300 rounded-lg duration-500">
             <a href="/Navbars">Navbars</a>
           </li>
           <li
-            class="nav__footers py-1 px-2 nav__links hover:bg-gray-300 rounded-lg duration-500">
+            class="nav__footers py-1 px-2 nav__links dark:hover:bg-gray-800 hover:bg-gray-300 rounded-lg duration-500">
             <a href="/Footers">Footers</a>
           </li>
           <li
-            class="nav__tags py-1 px-2 nav__links hover:bg-gray-300 rounded-lg duration-500">
+            class="nav__tags py-1 px-2 nav__links dark:hover:bg-gray-800 hover:bg-gray-300 rounded-lg duration-500">
             <a href="/tags">Tags()</a>
           </li>
           <li
-            class="nav__tags py-1 px-2 nav__links hover:bg-gray-300 rounded-lg duration-500">
+            class="nav__tags py-1 px-2 nav__links dark:hover:bg-gray-800 hover:bg-gray-300 rounded-lg duration-500">
             <a href="/WebPages">Pages</a>
           </li>
         </ul>
