--- a/src/components/WebPages/orderCard.astro
+++ b/src/components/WebPages/orderCard.astro
@@ -1,21 +1,17 @@
-<div class="orderCard space-y-4 w-97 mx-auto rounded-2xl my-4 shadow-lg">
-  <details
-    class="group border-s-8 border-red-500 rounded-2xl duration-1000 pl-2 py-4 [&_summary::-webkit-details-marker]:hidden"
-  >
+<div id="orderCard" class="orderCard space-y-4 w-97 mx-auto rounded-2xl my-4 shadow-lg dark:shadow-gray-600">
+  <details class="group border-s-8 border-red-500 rounded-2xl duration-1000 pl-2 py-4 [&_summary::-webkit-details-marker]:hidden">
     <summary class="flex flex-col cursor-pointer duration-100">
       <h2 class="font-medium text-xl">001428 Byron Vladimir Tito Sandoval</h2>
-      <p class="left-0 text-gray-700 text-base">Foco rojo</p>
+      <p class="left-0 dark:text-gray-300 text-gray-700 text-base">Foco rojo</p>
     </summary>
-    <div
-      class="overflow-hidden mt-4 flex flex-col max-h-0 transition-all duration-500 ease-in-out group-open:max-h-96"
-    >
+    <div class="overflow-hidden mt-4 flex flex-col max-h-0 transition-all duration-500 ease-in-out group-open:max-h-96">
       <p>TKS - 3648</p>
-      <label for="datatime" class="font-bold">Creado</label>
+      <label for="datatime" class="font-bold mt-3 ml-2">Creado</label>
       <p>11/07/2024 17:23</p>
-      <label for="datatime" class="font-bold">Finalizada</label>
-      <input type="datetime-local" id="datetime" name="datetime" />
-      <label for="options" class="font-bold">Estado</label>
-      <select name="opciones" id="opciones">
+      <label for="datatime" class="font-bold mt-3 ml-2">Finalizada</label>
+      <input class="bg-black h-12 mt-2 w-full" type="datetime-local" id="datetime" name="datetime" />
+      <label for="options" class="font-bold mt-3 ml-2">Estado</label>
+      <select class="bg-black h-12 mt-2" name="opciones" id="opciones" onchange="changeBorderColor()">
         <option value="creado">Creado</option>
         <option value="entregado">Entregado</option>
         <option value="enproceso">En proceso</option>
@@ -23,17 +19,12 @@
         <option value="reagendada">Reagendada</option>
         <option value="cancelada">Cancelada</option>
       </select>
-      <p class="font-bold">Informacion adicional</p>
-      <p>Cliente dice que no va a estar en su domicilio pero que afuera de su casa hay varios cables rotos despues que paso un camion</p>
+      <p class="font-bold mt-3 ml-2">Informacion adicional</p>
+      <p>
+        Cliente dice que no va a estar en su domicilio pero que afuera de su
+        casa hay varios cables rotos despues que paso un camion
+      </p>
     </div>
   </details>
 </div>
 
-<style>
-  details > div {
-    transition: max-height 0.5s ease-in-out;
-  }
-  details[open] > div {
-    max-height: 1000px;
-  }
-</style>
