--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -23,8 +23,8 @@ const { frontmatter } = Astro.props;
 
 <style>
   .tag a {
-    color: rgb(36, 19, 58);
-    transition: 400ms ease-in-out;
+    /* color: rgb(36, 19, 58);
+    transition: 400ms ease-in-out; */
   }
 
   .tag {
