--- a/src/components/Cards/order2.astro
+++ b/src/components/Cards/order2.astro
@@ -1,9 +1,9 @@
   <div
-    class="border rounded-2xl p-1 lg:w-96 w-11/12 mx-auto my-16 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300"
+    class="border rounded-2xl p-1 lg:w-96 w-11/12 mx-auto my-16 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300 dark:hover:bg-gray-800"
   >
     <div class=" grid grid-flow-row h-20 justify-center items-center">
       <svg
-        class="w-10 h-10 text-gray-800 border-b-2 pb-1 border-gray-400 "
+        class="w-10 h-10 text-gray-800 border-b-2 pb-1 border-gray-400 dark:text-blue-500 "
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
