--- a/src/components/Cards/order5.astro
+++ b/src/components/Cards/order5.astro
@@ -1,38 +1,106 @@
-  <div class="border h-32 my-16 rounded-2xl lg:w-96 w-11/12 mx-auto border-gray-400">
-    <div class="mt-5 text-center">
-      <h2 class="text-xl">001428 Byron Vladimir Tito Sandoval</h2>
-    </div>
+<div
+  class="border h-32 my-16 rounded-2xl lg:w-96 w-11/12 mx-auto border-gray-400"
+>
+  <div class="mt-5 text-center">
+    <h2 class="text-xl">001428 Byron Vladimir Tito Sandoval</h2>
+  </div>
 
-    <div class="mt-2">
-      <div class="flex justify-evenly">
+  <div class="mt-2">
+    <div class="flex justify-evenly">
+      <svg
+        class="w-12 h-12 text-black right-0 dark:text-violet-500"
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        fill="none"
+        viewBox="0 0 24 24"
+      >
+        <path
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M8 20V10m0 10-3-3m3 3 3-3m5-13v10m0-10 3 3m-3-3-3 3"></path>
+      </svg>
+      <div class=" ">
         <svg
-          class="w-12 h-12 text-black right-0"
-          aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
           fill="none"
           viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="size-10 text-green-700"
         >
           <path
-            stroke="currentColor"
             stroke-linecap="round"
             stroke-linejoin="round"
-            stroke-width="2"
-            d="M8 20V10m0 10-3-3m3 3 3-3m5-13v10m0-10 3 3m-3-3-3 3"></path>
+            d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+          ></path>
         </svg>
-        <div class="w-7 h-7 bg-red-700 rounded-full"></div>
-        <div>
-          <div class="w-4 h-4 mb-1 rounded-full bg-rose-600"></div>
-          <div class="w-5 h-5 -m-3 rounded-lg bg-rose-600"></div>
-          <div class="w-4 h-4 mt-1 rounded-full bg-rose-600"></div>
-        </div>
-        <div class="w-7 h-7 bg-green-700 rounded-full justify-center grid items-center  text-white text-center">
-          W
-        </div>
-        <div class="border rounded-lg p-1 border-black h-8">
-          <p class="">SJ</p>
-        </div>
+      </div>
+      <div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="size-9 text-yellow-400"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M20.25 3.75v4.5m0-4.5h-4.5m4.5 0-6 6m3 12c-8.284 0-15-6.716-15-15V4.5A2.25 2.25 0 0 1 4.5 2.25h1.372c.516 0 .966.351 1.091.852l1.106 4.423c.11.44-.054.902-.417 1.173l-1.293.97a1.062 1.062 0 0 0-.38 1.21 12.035 12.035 0 0 0 7.143 7.143c.441.162.928-.004 1.21-.38l.97-1.293a1.125 1.125 0 0 1 1.173-.417l4.423 1.106c.5.125.852.575.852 1.091V19.5a2.25 2.25 0 0 1-2.25 2.25h-2.25Z"
+          ></path>
+        </svg>
+      </div>
+      <div class="h-8">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="undefined"
+          height="undefined"
+          viewBox="0 0 256 258"
+        >
+          <defs>
+            <linearGradient
+              id="logosWhatsappIcon0"
+              x1="50%"
+              x2="50%"
+              y1="100%"
+              y2="0%"
+            >
+              <stop offset="0%" stop-color="#1FAF38"></stop>
+              <stop offset="100%" stop-color="#60D669"></stop>
+            </linearGradient>
+            <linearGradient
+              id="logosWhatsappIcon1"
+              x1="50%"
+              x2="50%"
+              y1="100%"
+              y2="0%"
+            >
+              <stop offset="0%" stop-color="#F9F9F9"></stop>
+              <stop offset="100%" stop-color="#FFF"></stop>
+            </linearGradient>
+          </defs>
+          <path
+            fill="url(#logosWhatsappIcon0)"
+            d="M5.463 127.456c-.006 21.677 5.658 42.843 16.428 61.499L4.433 252.697l65.232-17.104a122.994 122.994 0 0 0 58.8 14.97h.054c67.815 0 123.018-55.183 123.047-123.01c.013-32.867-12.775-63.773-36.009-87.025c-23.23-23.25-54.125-36.061-87.043-36.076c-67.823 0-123.022 55.18-123.05 123.004"
+          ></path>
+          <path
+            fill="url(#logosWhatsappIcon1)"
+            d="M1.07 127.416c-.007 22.457 5.86 44.38 17.014 63.704L0 257.147l67.571-17.717c18.618 10.151 39.58 15.503 60.91 15.511h.055c70.248 0 127.434-57.168 127.464-127.423c.012-34.048-13.236-66.065-37.3-90.15C194.633 13.286 162.633.014 128.536 0C58.276 0 1.099 57.16 1.071 127.416Zm40.24 60.376l-2.523-4.005c-10.606-16.864-16.204-36.352-16.196-56.363C22.614 69.029 70.138 21.52 128.576 21.52c28.3.012 54.896 11.044 74.9 31.06c20.003 20.018 31.01 46.628 31.003 74.93c-.026 58.395-47.551 105.91-105.943 105.91h-.042c-19.013-.01-37.66-5.116-53.922-14.765l-3.87-2.295l-40.098 10.513l10.706-39.082Z"
+          ></path>
+          <path
+            fill="#FFF"
+            d="M96.678 74.148c-2.386-5.303-4.897-5.41-7.166-5.503c-1.858-.08-3.982-.074-6.104-.074c-2.124 0-5.575.799-8.492 3.984c-2.92 3.188-11.148 10.892-11.148 26.561c0 15.67 11.413 30.813 13.004 32.94c1.593 2.123 22.033 35.307 54.405 48.073c26.904 10.609 32.379 8.499 38.218 7.967c5.84-.53 18.844-7.702 21.497-15.139c2.655-7.436 2.655-13.81 1.859-15.142c-.796-1.327-2.92-2.124-6.105-3.716c-3.186-1.593-18.844-9.298-21.763-10.361c-2.92-1.062-5.043-1.592-7.167 1.597c-2.124 3.184-8.223 10.356-10.082 12.48c-1.857 2.129-3.716 2.394-6.9.801c-3.187-1.598-13.444-4.957-25.613-15.806c-9.468-8.442-15.86-18.867-17.718-22.056c-1.858-3.184-.199-4.91 1.398-6.497c1.431-1.427 3.186-3.719 4.78-5.578c1.588-1.86 2.118-3.187 3.18-5.311c1.063-2.126.531-3.986-.264-5.579c-.798-1.593-6.987-17.343-9.819-23.64"
+          ></path>
+        </svg>
+      </div>
+      <div class="border rounded-lg p-1 border-black h-10 w-10 grid items-center justify-center dark:bg-blue-950">
+        <p class="">SJ</p>
       </div>
     </div>
   </div>
+</div>
