--- a/src/components/Cards/order8.astro
+++ b/src/components/Cards/order8.astro
@@ -1,34 +1,32 @@
-  <div
-    class="border rounded-2xl p-1 lg:w-96 w-11/12 mx-auto my-16 h-auto grid-flow-col grid border-gray-300 hover:bg-gray-100 duration-300"
-  >
-    <div class="grid h-20 justify-center items-center">
-      <svg
-        class="w-12 h-12 text-gray-800 "
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="24"
+<div
+  class="border rounded-2xl p-1 lg:w-96 w-11/12 mx-auto my-16 h-auto grid-flow-col grid border-gray-300 hover:bg-gray-100 duration-300"
+>
+  <div class="grid h-14 text-white justify-center items-center">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="undefined"
+      height="undefined"
+      viewBox="0 0 24 24"
+    >
+      <g
         fill="none"
-        viewBox="0 0 24 24"
+        stroke="currentColor"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
       >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M16 12h4m-2 2v-4M4 18v-1a3 3 0 0 1 3-3h4a3 3 0 0 1 3 3v1a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1Zm8-10a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
-        ></path>
-      </svg>
-      
-    </div>
-    <div class="justify-center items-center grid">
-        <div class="bordecito h-9 w-9 bg-green-500 rounded-3xl p-1"></div>
-      </div>
-    <div class="grid items-center justify-center text-lg">
-      <div>
-        <h2>001428 Byron Vladimir Tito </h2>
-        <p class="text-gray-400">TKS - 6666</p>
-      </div>
-    </div>
-   
+        <path d="M19 12h2l-9-9l-9 9h2v7a2 2 0 0 0 2 2h5.5"></path>
+        <path d="M9 21v-6a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2m1 4h6m-3-3v6"></path>
+      </g>
+    </svg>
   </div>
+  <div class="justify-center items-center grid">
+    <div class="bordecito h-9 w-9 bg-green-500 rounded-3xl p-1"></div>
+  </div>
+  <div class="grid items-center justify-center text-lg">
+    <div>
+      <h2>001428 Byron Vladimir Tito</h2>
+      <p class="text-gray-400">TKS - 6666</p>
+    </div>
+  </div>
+</div>
