--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -8,13 +8,13 @@ const allPosts = await getCollection("posts");
 const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 ---
 
-<Layout title="Kit Components |   Tags">
+<Layout title="Kit Components | Tags">
   <h2 class="text-3xl text-center mt-5">Lista de Tags</h2>
   <div class="tags__container max-w-screen-xl mx-auto grid lg:grid-cols-3 grid-cols-1">
     {
       tags.map((tag) => (
         <p class="tag shadow-xl">
-          <a href={`/tags/${tag}`}>{tag}</a>
+          <a class="dark:text-white" href={`/tags/${tag}`}>{tag}</a>
         </p>
       ))
     }
@@ -23,8 +23,9 @@ const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 
 <style>
   .tag a {
-    color: rgb(36, 19, 58);
-    transition: 400ms ease-in-out;
+    /* color: rgb(36, 19, 58);
+    transition: 400ms ease-in-out; */
+    
   }
 
   .tag {
