--- a/src/components/Cards/mixblend.astro
+++ b/src/components/Cards/mixblend.astro
@@ -1,4 +1,15 @@
-<div class="lg:m-10 lg:w-96 w-full h-96   mt-10">
+---
+// import { string } from 'astro/zod'
+
+interface Props {
+  title: string;
+  description: string;
+}
+
+const { title, description } = Astro.props;
+---
+
+<div class="lg:m-10 lg:w-96 w-full h-96 mt-10">
   <div class="relative h-96 flex items-center justify-center">
     <img
       class="blur-2xl h-96"
@@ -11,11 +22,11 @@
       alt="fondo"
     />
     <div
-      class=" absolute inset-0 h-3/4 w-3/4 m-auto opacity-0 bg-gray-900 hover:opacity-80 transition-opacity duration-300 text-white p-10 rounded-xl overflow-auto">
-      <h3 class="text-2xl pb-10">Islas Galapagos</h3>
+      class="absolute inset-0 h-3/4 w-3/4 m-auto opacity-0 bg-gray-900 hover:opacity-80 transition-opacity duration-300 text-white p-10 rounded-xl overflow-auto"
+    >
+      <h3 class="text-2xl pb-10">{title}</h3>
       <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi quam
-        nihil dolorum delectus corporis 
+        {description}
       </p>
     </div>
   </div>
