--- a/src/components/Cards/order2.astro
+++ b/src/components/Cards/order2.astro
@@ -1,4 +1,13 @@
-  <div
+---
+interface Props {
+  title: string;
+  numberTicket: number;
+}
+
+const {title, numberTicket} = Astro.props
+---
+
+<div
     class="border rounded-2xl p-1 lg:w-96 w-11/12 mx-auto my-16 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300 dark:hover:bg-gray-800"
   >
     <div class=" grid grid-flow-row h-20 justify-center items-center">
@@ -23,8 +32,8 @@
     </div>
     <div class="grid items-center justify-center text-lg ml-6">
         <div>
-            <h2>001428 Byron Vladimir Tito Sandoval</h2>
-            <p class="text-gray-400" >TKS - 6666</p>
+            <h2>{title}</h2>
+            <p class="text-gray-400" >TKS - {numberTicket}</p>
         </div>
         </div>
   </div>
