--- a/src/components/Cards/order7.astro
+++ b/src/components/Cards/order7.astro
@@ -1,12 +1,19 @@
+---
+interface Props{
+  title: string;
+  numberTicket: number;
+}
+const {title, numberTicket} = Astro.props
+---
 <div
   class="bordecito h-24 rounded-2xl lg:w-96 w-11/12 my-16 mx-auto overflow-hidden"
 >
-  <div class="flex justify-evenly items-center mt-4">
-    <div>
-      <h2 class="text-lg">001248 Byron Vladimir Tito</h2>
-      <p class="text-gray-400">TKS - 91919</p>
+  <div class="flex justify-between  items-center mt-4">
+    <div class="ml-2">
+      <h2 class="text-lg">{title}</h2>
+      <p class="text-gray-400">TKS - {numberTicket}</p>
     </div>
-    <div class="h-10 text-red-500">
+    <div class="h-10 text-red-500 w-1/6 ">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="undefined"
@@ -23,7 +30,7 @@
       </svg>
     </div>
   </div>
-  <div class="bg-orange-500 h-2 mt-4"></div>
+  <div class="bg-orange-500 h-2 mt-5"></div>
 </div>
 <style>
   .bordecito {
