--- a/src/components/Cards/simpleCard.astro
+++ b/src/components/Cards/simpleCard.astro
@@ -1,12 +1,20 @@
+---
+interface Props {
+  title: string;
+  description: string;
+}
+
+const {title, description} = Astro.props;
+---
 <div class=" lg:p-5 rounded-xl h-96 lg:w-96 w-11/12  lg:m-10 mx-auto mt-14 bg-gray-100 dark:bg-black">
   <div
     class="fondo_card mt-8 w-4/6 h-1/2 bg-white m-auto rounded-xl hover:scale-125 duration-100"
   >
   </div>
   <div class="mt-10">
-    <h3 class="text-3xl mb-5">Filadeldfia</h3>
+    <h3 class="text-3xl mb-5">{title}</h3>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, quas.
+      {description}
     </p>
   </div>
 </div>
