--- a/src/pages/Cards.astro
+++ b/src/pages/Cards.astro
@@ -10,7 +10,6 @@ import Order5 from "../components/Cards/order5.astro";
 import Order6 from "../components/Cards/order6.astro";
 import Order7 from "../components/Cards/order7.astro";
 import Order8 from "../components/Cards/order8.astro";
-
 ---
 
 <Layout title="Kit Components | Cards">
@@ -19,16 +18,19 @@ import Order8 from "../components/Cards/order8.astro";
       <h1 class="w-full text-6xl lg:text-6xl text-center">Seccion de Cards</h1>
     </div>
   </div>
-  <div class="grid lg:grid-cols-3 ">
-    <Mixblend/>
-    <SimpleCard/>
-    <Order1/>
-    <Order2/>
-    <Order3/>
-    <Order4/>
-    <Order5/>
-    <Order6/>
-    <Order7/>
-    <Order8/>
+  <div class="grid lg:grid-cols-3">
+    <Mixblend
+      title="Islas Galapgos"
+      description="Es las Islas mas importante del mundo por el estudio que realizo Charles Darwin"
+    />
+    <SimpleCard title="Filadelfia" description="Es una isla o algo parecido " />
+    <Order1 title="003983 RODRIGUEZ ARCILA DAY MAR" />
+    <Order2 title="003981 CONTRERAS PINELA JOSE EDUARDO" numberTicket={68363} />
+    <Order3 title='003980 LARA LEMA CARLOS MARCELO' numberTicket={99992}/>
+    <Order4 title="003978 HERNANDEZ SOLANO JHON FREDY" />
+    <Order5 title='003979 TOCAIN MOSQUERA ANTHONY FABIAN' sector='LLG' />
+    <Order6 title="003973 TORRES TORRES LUIS ANIBAL" numberTicket={4865} />
+    <Order7 title="003976 LOPEZ HURTADO CRISTINA " numberTicket={1234} />
+    <Order8 title="003969 SUAREZ LAURO SIXTO" numberTicket={9865} />
   </div>
 </Layout>
