--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ import Hamburger from "../components/Hamburger.astro";
     <title>{title}</title>
     <ViewTransitions />
   </head>
-  <body class="dark:bg-dark dark:text-white">
+  <body class="dark:bg-dark dark:text-white bg-gray-200">
     <Hamburger />
     <Nav />
     <main class="lg:max-w-screen-xl mx-auto mt-14">
