--- a/src/components/WebPages/orderCard.astro
+++ b/src/components/WebPages/orderCard.astro
@@ -13,7 +13,7 @@ const {
 
 <div
   id="orderCard"
-  class="orderCard space-y-4 w-97 dark:bg-black bg-white mx-auto rounded-2xl my-4 z-50"
+  class="orderCard space-y-4 w-97 dark:bg-darkCard bg-white mx-auto rounded-2xl my-4 z-50"
 >
   <details
     class="group border-s-8 border-red-500 rounded-2xl duration-1000 pl-2 py-4 [&_summary::-webkit-details-marker]:hidden"
