--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import CardsInsCards from "../components/CardsInCards.astro";
 import NavbarsInNavbars from "../components/navbarsInNavbars.astro";
-import Prueba from "../components/codeExample.astro";
-import Order8 from "../components/Cards/order8.astro";
-
+import CodeExample from "../components/codeExample.astro";
 ---
 
 <Layout title="Kit Components" transition:animate="fade">
@@ -14,7 +12,7 @@ import Order8 from "../components/Cards/order8.astro";
     <CardsInsCards  />
     <NavbarsInNavbars />
   </div>
-  <Prueba/>
+  <CodeExample/>
 
   
 </Layout>
