--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Nav from "../components/Nav.astro";
-import Footer from "../components/Footer.astro";
+// import Footer from "../components/Footer.astro";
 interface Props {
   title: string;
 }
@@ -27,7 +27,7 @@ import Hamburger from "../components/Hamburger.astro";
     <main class="lg:max-w-screen-xl mx-auto mt-14">
       <slot />
     </main >
-    <Footer />
+    <!-- <Footer /> -->
     <script>
       import "../scripts/menu.js";
     </script>
