--- a/src/components/WebPages/counterOrders.astro
+++ b/src/components/WebPages/counterOrders.astro
@@ -1,4 +1,4 @@
-<div class="backdrop-blur-2xl bg-black/50  bottom-0 w-full fixed mx-auto z-50">
+<div class="backdrop-blur-2xl dark:bg-black/50  bottom-0 w-full fixed mx-auto z-50 max-w-screen-2xl">
   <div class="h-24 flex justify-evenly items-center ">
     <div class="">
       <div>
