--- a/src/pages/WebPages/Control-de-ordenes.astro
+++ b/src/pages/WebPages/Control-de-ordenes.astro
@@ -2,61 +2,70 @@
 import WebPagesLayout from "../../layouts/WebPagesLayout.astro";
 import OrderCard from "../../components/WebPages/orderCard.astro";
 import CounterOrders from "../../components/WebPages/counterOrders.astro";
+import NewAccorion from "../../components/WebPages/newAccorion.astro";
 ---
 
-<WebPagesLayout title="Kit Components | WebPages">
-  <h1 class="text-2xl lg:text-6xl text-center mb-5">
-    Control de ordenes diarias con CARDS
-  </h1>
-  <OrderCard
-    title="003966 CADENA EDWIN REMIGIO"
-    numberTicket={5678}
-    additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos "
-  />
-  <OrderCard
-    title="003966 CADENA EDWIN REMIGIO"
-    numberTicket={5678}
-    additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos "
-  />
-  <OrderCard
-    title="003966 CADENA EDWIN REMIGIO"
-    numberTicket={5678}
-    additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
-  />
-  <OrderCard
-    title="003966 CADENA EDWIN REMIGIO"
-    numberTicket={5678}
-    additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
-  />
-  <OrderCard
-    title="003966 CADENA EDWIN REMIGIO"
-    numberTicket={5678}
-    additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
-  />
-  <OrderCard
-    title="003966 CADENA EDWIN REMIGIO"
-    numberTicket={5678}
-    additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
-  />
-  <OrderCard
-    title="003966 CADENA EDWIN REMIGIO"
-    numberTicket={5678}
-    additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
-  />
-  <OrderCard
-    title="003966 CADENA EDWIN REMIGIO"
-    numberTicket={5678}
-    additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
-  />
-  <OrderCard
-    title="003966 CADENA EDWIN REMIGIO"
-    numberTicket={5678}
-    additionalInformation="No hay novedades"
-  />
-  <OrderCard
-    title="003966 CADENA EDWIN REMIGIO"
-    numberTicket={5678}
-    additionalInformation="No hay novedades"
-  />
+<WebPagesLayout
+  title="Control de ordenes con CARDS"
+  namePage="Control de ordenes diarias con CARDS"
+>
+  <div class="lg:grid lg:grid-cols-3 gap-10">
+    <OrderCard
+      title="003966 CADENA EDWIN REMIGIO"
+      numberTicket={5678}
+      additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos lorem Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque lectus nec nisl sollicitudin, ac sagittis magna aliquam. Phasellus at orci ut sapien tristique ultrices non id metus. Morbi eu sem et odio bibendum tincidunt sed a orci. Nulla facilisi. Vivamus nec nisi id urna dictum cursus. Nam congue mauris eget nunc facilisis, sit amet egestas magna mollis. Duis fermentum, odio a tincidunt scelerisque, ligula tortor volutpat libero, nec fermentum augue quam sit amet purus.Curabitur ultricies, nisl nec fermentum tincidunt, nunc leo dapibus ligula, non eleifend nulla lorem a quam. Integer sed magna ut magna sollicitudin venenatis. Nullam vehicula vestibulum turpis a gravida. Etiam vestibulum auctor risus, et elementum eros vehicula sed. Integer non nulla vel dolor fermentum ullamcorper. Phasellus interdum nibh non nisi elementum, nec dignissim eros scelerisque. Quisque nec eros non urna sollicitudin pretium. Praesent bibendum feugiat nunc, a volutpat odio iaculis eget. Fusce ut quam ut nulla venenatis bibendum ac a arcu.Suspendisse potenti. Fusce nec purus eget dolor iaculis sodales. Sed ut metus et neque malesuada cursus. Nam quis risus vel odio posuere tincidunt. Integer viverra lacus ut orci tempor, a eleifend odio porttitor. Nullam dictum leo sit amet leo efficitur, quis euismod purus ultricies. Proin quis justo vitae libero ullamcorper feugiat. Aenean venenatis neque a nibh aliquet, et volutpat orci vulputate. Vestibulum at nibh ac erat laoreet ullamcorper.Maur"
+    />
+    <OrderCard
+      title="003966 CADENA EDWIN REMIGIO"
+      numberTicket={5678}
+      additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos "
+    />
+    <OrderCard
+      title="003966 CADENA EDWIN REMIGIO"
+      numberTicket={5678}
+      additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
+    />
+    <OrderCard
+      title="003966 CADENA EDWIN REMIGIO"
+      numberTicket={5678}
+      additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
+    />
+    <OrderCard
+      title="003966 CADENA EDWIN REMIGIO"
+      numberTicket={5678}
+      additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
+    />
+    <OrderCard
+      title="003966 CADENA EDWIN REMIGIO"
+      numberTicket={5678}
+      additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
+    />
+    <OrderCard
+      title="003966 CADENA EDWIN REMIGIO"
+      numberTicket={5678}
+      additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
+    />
+    <OrderCard
+      title="003966 CADENA EDWIN REMIGIO"
+      numberTicket={5678}
+      additionalInformation="Cliente indica que tiene los equipos en la otra casa primero confirmar que si tenga todos los equipos no instalar hasta que se confirma todos los materiales"
+    />
+    <OrderCard
+      title="003966 CADENA EDWIN REMIGIO"
+      numberTicket={5678}
+      additionalInformation="No hay novedades"
+    />
+    <OrderCard
+      title="003966 CADENA EDWIN REMIGIO"
+      numberTicket={5678}
+      additionalInformation="No hay novedades"
+    />
+    <NewAccorion/>
+    <NewAccorion/>
+    <NewAccorion/>
+    <NewAccorion/>
+    <NewAccorion/>
+  </div>
+
   <CounterOrders />
 </WebPagesLayout>
