--- a/src/components/Cards/order4.astro
+++ b/src/components/Cards/order4.astro
@@ -6,7 +6,7 @@ const {title} = Astro.props
 ---
 
 <div
-    class="bordecito border rounded-2xl border-l-blue-800 p-1 lg:w-96 w-11/12 mx-auto my-16 h-auto grid-flow-col grid duration-300"
+    class="bordecito bg-white border rounded-2xl border-l-blue-800 p-1 lg:w-96 w-11/12 mx-auto my-16 h-auto grid-flow-col grid duration-300"
   >
     <div class="grid items-center justify-center">
       <h2 class="text-lg">{title} </h2>
