--- a/src/layouts/WebPagesLayout.astro
+++ b/src/layouts/WebPagesLayout.astro
@@ -1,9 +1,10 @@
 ---
 interface Props {
   title: string;
+  namePage: string;
 }
 import { ViewTransitions } from "astro:transitions";
-const { title } = Astro.props;
+const { title, namePage } = Astro.props;
 import "../styles/global.css";
 ---
 
@@ -18,27 +19,20 @@ import "../styles/global.css";
     <title>{title}</title>
     <ViewTransitions />
   </head>
-  <body class="dark:bg-dark dark:text-white bg-gray-200">
-    <nav class="mt-3 flex items-center justify-center ">
-      <a href="/WebPages" class="flex items-center justify-center">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="size-10"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25M9 16.5v.75m3-3v3M15 12v5.25m-4.5-15H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z"
-          ></path>
+  <body class="dark:bg-dark dark:text-white bg-gray-100">
+    <nav class="mt-3 flex  items-center ">
+      <a href="/WebPages" class="ml-4 flex z-10">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
         </svg>
-        <p>Regresar a pages</p>
-    </a>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 my-auto">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
+        </svg>
+        
+      </a>
+      <h2 class="text-end pr-2 lg:text-3xl text-lg lg:text-center w-full absolute z-0">{namePage}</h2>
     </nav>
-    <main class="mx-auto mt-6 mb-32">
+    <main class="mx-auto mt-6 mb-32 max-w-screen-2xl">
       <slot />
     </main>
   </body>
