--- a/src/pages/WebPages/index.astro
+++ b/src/pages/WebPages/index.astro
@@ -8,7 +8,7 @@ import Layout from "../../layouts/Layout.astro";
     
     <a
       href="/WebPages/Control-de-ordenes"
-      class="w-full min-h-20 rounded-xl border items-center p-2 flex shadow"
+      class="w-full min-h-20 rounded-xl border items-center p-2 flex shadow bg-gray-200 duration-300 ease-in-out hover:-translate-y-2"
     >
       <div class=" w-1/6 ">
         <svg
@@ -26,7 +26,7 @@ import Layout from "../../layouts/Layout.astro";
           ></path>
         </svg>
       </div>
-      <h2 class="">Control de ordenes en otra etiqueta</h2>
+      <h2 class="">Control de ordenes con CARDS</h2>
     </a>
 
     
