Arreglos en cards

--- a/src/components/WebPages/counterOrders.astro
+++ b/src/components/WebPages/counterOrders.astro
@@ -1,14 +1,15 @@
-<div class="backdrop-blur-2xl dark:bg-black/50  bottom-0 w-full fixed mx-auto z-50 max-w-screen-2xl">
-  <div class="h-24 flex justify-evenly items-center ">
+<div
+  class="backdrop-blur-2xl dark:bg-black/50 bottom-0 w-full fixed mx-auto z-50 max-w-screen-2xl"
+>
+  <div class="h-20 flex justify-evenly items-center">
     <div class="">
-      <div>
-        Ordenes completadas
-      </div>
-      <p class="text-center">5</p>
+      <div class="text-green-500 text-lg">Ordenes completadas</div>
+      <p class="text-center text-xl">5</p>
     </div>
+    <span class="text-4xl my-auto text-gray-400">|</span>
     <div class="">
-      <div>Ordenes recibidas</div>
-      <p class="text-center">8</p>
+      <div class="text-orange-500 text-lg">Ordenes recibidas</div>
+      <p class="text-center text-xl">8</p>
     </div>
   </div>
 </div>
