--- a/src/layouts/WebPagesLayout.astro
+++ b/src/layouts/WebPagesLayout.astro
@@ -25,12 +25,10 @@ import "../styles/global.css";
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
           <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
         </svg>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 my-auto">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
-        </svg>
+      
         
       </a>
-      <h2 class="text-end pr-2 lg:text-3xl text-lg lg:text-center w-full absolute z-0">{namePage}</h2>
+      <h2 class="text-end pr-2 lg:text-3xl  lg:text-center w-full absolute z-0">{namePage}</h2>
     </nav>
     <main class="mx-auto mt-6 mb-32 max-w-screen-2xl">
       <slot />
